5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1724_2518.log
== TEST (2019-05-13 17:38:14) 
-- CODE:
n=int(input())
print(n)
if(n%2==0):
	n=n/2
	print(n)
	while(n!=1)
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- ERROR:
File "XXXX", line 6
    while(n!=1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:39:52) 
-- CODE:
n=int(input())
print(n)
if(n%2==0):
	n=n/2
	print(n)
	while(n!=1)
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- ERROR:
File "XXXX", line 6
    while(n!=1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:20:43) 
-- CODE:
n=int(input())
print(n)
if(n%2==0):
	n=n/2
	print(n)
	while(n!=1)
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- ERROR:
File "XXXX", line 6
    while(n!=1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:12) 
-- CODE:
n=int(input())
print(n)
if(n%2==0):
	n=n/2
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- OUTPUT:
10
5.0
16.0
8.0
4.0
2.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:21:35) 
-- CODE:
n=int(input())
print(n)
if(n%2==0):
	n=n/2
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- EXECUTION TIME:
0.16009
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
10
5.0
16.0
8.0
4.0
2.0
1.0
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
45
136
68.0
34.0
17.0
52.0
26.0
13.0
40.0
20.0
10.0
5.0
16.0
8.0
4.0
2.0
1.0
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
13
40
20.0
10.0
5.0
16.0
8.0
4.0
2.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:42) 
-- CODE:
n=int(input())
print(n)
if(n%2==0):
	n=n/2
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- OUTPUT:
10
5.0
16.0
8.0
4.0
2.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:22:01) 
-- CODE:
n=int(input())

if(n%2==0):
	n=n/2
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- OUTPUT:
5.0
16.0
8.0
4.0
2.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:22:14) 
-- CODE:
n=int(input())

if(n%2==0):
	n=n/2
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- EXECUTION TIME:
0.310462
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5.0
16.0
8.0
4.0
2.0
1.0
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
68.0
34.0
17.0
52.0
26.0
13.0
40.0
20.0
10.0
5.0
16.0
8.0
4.0
2.0
1.0
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
20.0
10.0
5.0
16.0
8.0
4.0
2.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:22:16) 
-- CODE:
n=int(input())

if(n%2==0):
	n=n/2
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n/2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- OUTPUT:
5.0
16.0
8.0
4.0
2.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:23:02) 
-- CODE:
n=int(input())

if(n%2==0):
	n=n//2
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n//2
			print(n)
		else:
			n=n*3+1
			print(n)
	
	
else:
	n=n*3+1
	print(n)
	while(n!=1):
		if(n%2==0):
			n=n//2
			print(n)
		else:
			n=n*3+1
			print(n)
	
-- EXECUTION TIME:
0.165999
-- TEST CASE 1:
---- input:
10 
---- correct output:
5
16
8
4
2
1
---- user output:
5
16
8
4
2
1
-- TEST CASE 2:
---- input:
45
---- correct output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
---- user output:
136
68
34
17
52
26
13
40
20
10
5
16
8
4
2
1
-- TEST CASE 3:
---- input:
13
---- correct output:
40
20
10
5
16
8
4
2
1
---- user output:
40
20
10
5
16
8
4
2
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
